installs imagesloaded library which fixes issue where images were overlapping. Also converted to a four column grid with 14px gutter.

--- a/app.css
+++ b/app.css
@@ -1,16 +1,19 @@
 
 /* .masonry { width: 1140px; } */
 .masonry { list-style: none; }
-.masonry .grid-sizer { width: 220px; }
+.masonry .grid-sizer { width: 275px; }
 .masonry .item {
-  width: 220px;
+  width: 275px;
   background-color: #ccc;
   border-radius: 2px;
-  margin-bottom: 10px;
+  margin-bottom: 14px;
 }
+
+.item.w2 { width: 450px; }
 
 .masonry .item img {
   border: none;
   outline: none;
+  display: block;
   max-width: 100%;
 }
